# huble-sdk-python

./: INTEGRATION.md  README.md  openapi-config.yaml  openapi-spec.yaml  pyproject.toml  requirements.txt
examples/: odoo_addon_migration.py
llmhub/: __init__.py  _shape.py  agent.py  audio.py  chat.py  client.py  data.py  discovery.py  document.py  embeddings.py  enrichment.py  exceptions.py  image.py  moderation.py  prompts.py  text.py  video.py
tests/unit/: test_agent.py  test_chat.py  test_discovery.py  test_shape.py
